# ethglobal-2025

./: README.md  build.nu  dev-links.md  env.nu
Frontend/: package-lock.json  package.json
Frontend/app/: page.tsx  providers.tsx
actions/: deploy-smartcontracts.nu  deploy.nu  generate-zk.nu  interact-smarcontracts.nu  master_contract.nu  master_params.toml
circuits/: Cargo.toml  Nargo.toml  Prover.toml  README.md  build.nu
circuits/src/: addr.nr  main.nr  main.rs  uint.nr
contracts/: README.md  foundry.toml
contracts/broadcast/Counter.s.sol/48898/: run-1763770347568.json  run-1763772267723.json  run-1763773185700.json  run-1763773399722.json
contracts/broadcast/Deploy.s.sol/48898/: run-1763833138597.json  run-1763833179988.json  run-1763833214731.json  run-1763833323084.json  run-1763833491125.json  run-1763833570592.json  run-1763833661379.json  run-1763835881020.json
contracts/broadcast/Deploy.s.sol/80002/: run-1763871581984.json  run-latest.json
contracts/broadcast/MasterContract.s.sol/48898/: run-1763785888968.json  run-latest.json
contracts/script/: Deploy.s.sol  Deploy.sol  EIP7702.s.sol  MasterContract.s.sol  MasterContract.sol  MasterContractNoir.sol
contracts/src/: 7702.sol  Counter.sol  EIP7702.sol  ERC7702.sol  IMasterControl.sol  MasterContract.sol  ProxyMasterContract.sol
contracts/src/from-circuits/: Verifier.sol
contracts/test/: 7702.t.sol  Deploy.t.sol  ERC7702DeployTest.t.sol  MasterContract.sol
forge/: DEPLOY.nu  README.md  foundry.toml
