[package]
name = "circuits"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = "1.4.1"
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
rustyline = "17.0.2"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
ystd = "0.0.11"
